2004-11-03 Mikhail Khodjaiants
	New implementation of expressions. 
	Large arrays partitioning based on the framework model.
	* CoreModelMessages.properties
	* AbstractCValue.java
	* CExpression.java
	* CIndexedValue.java: new
	* CValue.java
	* CValueFactory.java
	* CVariable.java
	* CArrayPartition.java: removed
	* CArrayPartitionValue.java: removed

2004-11-02 Alain Magloire
	Refactor ICDIConfiguratio --> ICDISessionConfiguration and ICDITargetConfiguration
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDISession.java
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDISessionConfiguration.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDITarget.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDITargetConfiguration.java

	* src/org/eclipse/cdt/debug/core/CDIDebugModel.java
	* src/org/eclipse/cdt/debug/interternal/core/model/CDIDebugTarget.java
	* src/org/eclipse/cdt/debug/interternal/core/model/CThread.java

2004-11-1 David Inglis
	
	Fixed bogus exception with older CDI debuggers.
	
	* src/org/eclipse/cdt/debug/internal/core/CDebugAdapter.java
	
2004-10-31 Alain Magloire
	Refactor ICDIVariableObject --> ICDIVariableDescriptor
	Refactor ICDIArgumentObject --> ICDIArgumentDescriptor
	Refactor ICDIRegisterObject --> ICDIRegisterDescriptor
	Addition ICDIThreadStorageDescriptor, ICDIThreadStorage
	Addition ICDILocalVariableDescriptor, ICDILocalVariable
	Addition ICDIGlobalVariableDescriptor, ICDIGlovalVariable

	Adjust the classes to the changes.

2004-10-29 Mikhail Khodjaiants
	Use the new expression API of CDI.
	* CDebugModel.java
	* CDIDebugModel.java
	* CGlobalVariableManager.java
	* AbstractCValue.java
	* AbstractCVariable.java
	* CArrayPartition.java
	* CArrayPartitionValue.java
	* CDebugTarget.java
	* CExpression.java
	* CStackFrame.java
	* CValue.java
	* CVariable.java
	* CExpressionTarget.java: removed

2004-10-29 Alain Magloire
	Remove of ICDISharedLibraryManager
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDISession.java