@@ -1,3 +1,7 @@
+2004-11-04 Mikhail Khodjaiants
+	CSignalManager no longer extends CUpdateManager.
+	* CSignalManager.java
+ 
 2004-11-03 Mikhail Khodjaiants
 	New implementation of expressions. 
 	Large arrays partitioning based on the framework model.
